--- a/core/templates/dashboard/super_owner/dashboard.html
+++ b/core/templates/dashboard/super_owner/dashboard.html
@@ -77,6 +77,11 @@
       </a>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-6">
+      <a href="{% url 'super_owner_inventory' %}" class="qa btn btn-light w-100">
+        <i class="bi bi-stack"></i><span>إدارة المخزون</span>
+      </a>
+    </div>
+    <div class="col-lg-2 col-md-4 col-sm-6">
       <a href="{% url 'super_owner_announcements' %}" class="qa btn btn-light w-100">
         <i class="bi bi-megaphone"></i><span>إدارة الإعلانات</span>
       </a>
