--- a/core/templates/dashboard/super_owner/products.html
+++ b/core/templates/dashboard/super_owner/products.html
@@ -46,6 +46,10 @@
                                 <i class="fas fa-plus me-2"></i>
                                 إضافة منتج جديد
                             </a>
+                            <a href="{% url 'super_owner_inventory' %}" class="btn btn-outline-secondary">
+                                <i class="fas fa-warehouse me-2"></i>
+                                إدارة المخزون
+                            </a>
                         </div>
                     </div>
 
